--- a/MVC/Main/Base.lproj/Main.storyboard
+++ b/MVC/Main/Base.lproj/Main.storyboard
@@ -45,6 +45,12 @@
                                     <action selector="goDidTouch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="72D-vk-6Aa"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dynamic Type: Storyboard" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5FM-zZ-n5K">
+                                <rect key="frame" x="16" y="82" width="150" height="14.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -52,6 +58,9 @@
                             <constraint firstItem="eRr-BU-V3Z" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="154" id="8uD-1Q-nVF"/>
                             <constraint firstItem="eRr-BU-V3Z" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="XDP-tM-ORU"/>
                             <constraint firstItem="JtO-1f-hf3" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Yjy-PA-ohi"/>
+                            <constraint firstItem="5FM-zZ-n5K" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="18" id="Zid-md-CsZ"/>
+                            <constraint firstItem="5FM-zZ-n5K" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="dSQ-Il-Onb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="5FM-zZ-n5K" secondAttribute="trailing" constant="8" id="g8c-Xv-Xxr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="JtO-1f-hf3" secondAttribute="bottom" constant="31" id="j15-d5-cpT"/>
                             <constraint firstItem="x9q-iW-aDx" firstAttribute="top" secondItem="eRr-BU-V3Z" secondAttribute="bottom" constant="18" id="sAz-WH-k05"/>
                         </constraints>
@@ -60,6 +69,7 @@
                     <navigationItem key="navigationItem" id="DKY-cF-mRL"/>
                     <connections>
                         <outlet property="imageTypeControl" destination="eRr-BU-V3Z" id="YeK-5S-t1S"/>
+                        <outlet property="storyboardLabel" destination="5FM-zZ-n5K" id="i3q-Qh-TBH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
